--- a/server/fcserver.config
+++ b/server/fcserver.config
@@ -4,7 +4,7 @@
 
     "color": {
         "gamma": 1.0,
-        "whitepoint": [1.0, 1.0, 1.0]
+        "whitepoint": [0.25, 0.25, 0.25]
     },
 
     "devices": [
@@ -12,14 +12,18 @@
       "serial": "1443230",
             "type": "teensy",
             "map": [
-                [ 0, 0,   0,   8000],
-		[ 0, 70,  1  , 82],
-		[ 0, 152, 2  , 84],
-		[ 0, 236, 3  , 166]
+                [ 0, 0,   0,   166],
+		[ 0, 166,  1  , 166],
+		[ 0, 332, 2  , 166],
+		[ 0, 498, 3  , 166],
+		[ 0, 664, 4  , 166],
+		[ 0, 830, 5  , 166],
+		[ 0, 996, 6  , 166],
+		[ 0, 1162, 7  , 166]
 	   ]
         },
         {
-	    "serial": "QQYAKMMOBNYZSLSZ",
+	    "serial": "RHDNVXZJDHQBYBEJ",
             "type": "fadecandy",
             "map": [
                 [ 0, 320,    0, 35],
@@ -73,6 +77,48 @@
     [ 0, 1516, 384, 42],
     [ 0, 1558, 448, 42]
             ]
+        },
+        {
+      		"serial": "861910",
+            "type": "teensy",
+            "map": [
+                [ 0, 0,   0,   166],
+		[ 0, 166,  1  , 166],
+		[ 0, 332, 2  , 166],
+		[ 0, 498, 3  , 166],
+		[ 0, 664, 4  , 166],
+		[ 0, 830, 5  , 166],
+		[ 0, 996, 6  , 166],
+		[ 0, 1162, 7  , 166]
+				   ]
+        },
+        {
+      		"serial": "853110",
+            "type": "teensy",
+            "map": [
+                [ 0, 0,   0,   166],
+		[ 0, 166,  1  , 166],
+		[ 0, 332, 2  , 166],
+		[ 0, 498, 3  , 166],
+		[ 0, 664, 4  , 166],
+		[ 0, 830, 5  , 166],
+		[ 0, 996, 6  , 166],
+		[ 0, 1162, 7  , 166]
+				   ]
+        },
+        {
+      		"serial": "1444140",
+            "type": "teensy",
+            "map": [
+                [ 0, 0,   0,   166],
+		[ 0, 166,  1  , 166],
+		[ 0, 332, 2  , 166],
+		[ 0, 498, 3  , 166],
+		[ 0, 664, 4  , 166],
+		[ 0, 830, 5  , 166],
+		[ 0, 996, 6  , 166],
+		[ 0, 1162, 7  , 166]
+				   ]
         }
     ]
 }
